--- a/web/main.css
+++ b/web/main.css
@@ -21,6 +21,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   position: relative;
 }
 
@@ -30,25 +31,31 @@ body {
   width: 360px;
   margin: 0 12px;
   padding: 12px 24px;
-  height: 100px;
+  min-height: 100px;
   border-radius: 24px;
+  display: flex;
+  flex-direction: column;
 }
 
 .player-extension.a {
-  top: 0;
+  bottom: 0;
   justify-content: flex-end;
 }
 
 .player-extension.b {
-  bottom: 0;
+  top: 0;
   justify-content: flex-start;
 }
 
 .player-extension {
+  width: 360px;
+  padding: 12px 24px;
   height: 100px;
+  border-radius: 24px;
   position: absolute;
+  left: 0;
   z-index: -1;
-  background-color: rgba(0, 0, 0, .6) !important;
+  background-color: rgba(0, 0, 0, .6);
   transition: top 0.5s ease-out, bottom 0.5s ease-out;
   font-weight: bold;
   display: flex;
@@ -92,6 +99,7 @@ body {
   font-weight: bold;
   opacity: 1;
   transition: opacity .5s ease-out;
+  margin-top: 20px;
 }
 
 .player-icon__container {
@@ -111,6 +119,35 @@ body {
 
 .player-balance__number {
   font-size: 42px;
+}
+
+.time-elapsed {
+  color: rgba(255, 255, 255, .7);
+  margin-top: 4px;
+}
+
+.game-result {
+  background-color: rgba(0, 0, 0, .7);
+  color: white;
+  border-radius: 12px;
+  min-width: 180px;
+  min-height: 120px;
+  box-sizing: border-box;
+  /* display: flex; */
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.game-result-name {
+  font-size: 24px;
+}
+
+.game-result-title {
+  font-size: 60px;
+  font-weight: bold;
 }
 
 .gameboard {
@@ -254,4 +291,76 @@ body {
   text-align: center;
   line-height: 24px;
   font-weight: bold;
+}
+
+.history-viewer {
+  margin: 10px 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+.current-match {
+  font-size: 24px;
+  text-align: center;
+  align-self: center;
+}
+
+.current-match td:nth-child(2) {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.current-match td:nth-child(1) {
+  text-align: right;
+}
+
+.current-match td:nth-child(3) {
+  text-align: left;
+}
+
+.current-match tr:nth-child(1) {
+  font-size: 48px;
+  font-weight: bold;
+}
+
+.current-match tr:nth-child(1) > td {
+  padding-bottom: 14px;
+}
+
+.money {
+  font-family: "Gill Sans", "Helvetica Neue", sans-serif;
+  font-size: 26px;
+  margin: 0 4px;
+}
+
+.money::before {
+  content: "$";
+  font-size: 15px;
+}
+
+.history-winner {
+  font-weight: bold;
+}
+
+.save-button {
+  display: none;
+  align-self: center;
+  margin: 20px 0;
+  padding: 8px 18px;
+  border-radius: 12px;
+  font-size: 24px;
+  text-align: center;
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, .87);
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.2s ease-out;
+}
+
+.save-button:hover {
+  background-color: rgba(0, 0, 0, .3);
+}
+
+.save-button:active {
+  background-color: rgba(0, 0, 0, .6);
 }
